--- a/Assets/VantasticKick/Resources/Config/game_config.json
+++ b/Assets/VantasticKick/Resources/Config/game_config.json
@@ -2,12 +2,13 @@
   "gameplay": 
   {
     "ballVelocity" : 14.0,
-    "scatterFactor" : 1.0
+    "scatterFactor" : 0.2
   },
   "gameround":
   {
     "attempts":10,
-    "basicPoints":100,
+    "basicPoints":50,
+    "targetPoints":100,
     "comboBonusPoints":[0,20,50,150,400]
   }
 }
